we_clearblue/theme/common.css
/**
 * Common tags
 */
html,
body {
	background: #fff;
	color: #536482;
}

body {
	margin: 0;
	padding: 0;
	font-family: Tahoma, Arial, Helvetica, sans-serif;
	font-size: 12px;
}

h1 {
	margin: 0;
	margin-bottom: 8px;
	font-family: Georgia, Cambria, "Times New Roman", serif;
	font-size: 48px;
	font-weight: normal;
}

h2 {
	margin-top: 0;
	margin-bottom: 12px;
	color: #535353;
	font-family: Arial, Helvetica, sans-serif;
}

h3 {
	margin-top: 24px;
	margin-bottom: 8px;
	padding-bottom: 5px;
	border-color: #b7c9d7;
	color: #105289;
	font-size: 14px;
}

h4 {
	font-family: Arial, Helvetica, sans-serif;
	font-weight: bold;
}

p {
	margin-bottom: 18px;
	line-height: 18px;
	font-size: 12px;
}

hr {
	margin-top: 8px;
	margin-bottom: 8px;
}

a:link,
a:visited {
	color: #105289;
}

a:focus,
a:hover,
a:active {
	text-decoration: underline;
	color: #bc2a4d;
}

/**
 * Structure
 *
 * Main structure including wrapper, header, content and footer. By default
 * forum width is fluid (with support for Responsive Web Design). To change it
 * to fixed width, remove below "max-width" property and set desired width. Next
 * remove links to both responsive.css files in overall_header.html.
 */
#wrap {
	max-width: none;
	min-width: 0;
	margin: 0;
	padding: 0;
	border: 0;
	border-radius: 0;
	background: none;
}

.inventea-wrapper,
.inventea-dashboard,
.inventea-footer {
	box-sizing: border-box;
	max-width: 1170px;
	margin: auto;
}

.inventea-wrapper,
.inventea-footer {
	position: relative;
	width: 95%;
}

.inventea-header {
	border-bottom: 1px solid #bad1de;
	background: #e0edf4;
}

.inventea-dashboard {
	background: url("./images/dashboard.jpg") no-repeat right center;
	background-size: cover;
}

.inventea-content:after {
	content: "";
	display: block;
	clear: both;
}

.inventea-footer-wrapper,
.inventea-footer-wrapper::after {
	display: block;
	width: 100%;
	background: #585757;
}

.inventea-footer-wrapper {
	margin-top: 24px;
	padding-top: 28px;
	padding-bottom: 25px;
}

.inventea-footer {
	overflow: hidden;
	color: #e7e4e4;
	line-height: 18px;
	font-size: 12px;
}

/**
 * Navigation bars
 *
 * Main menus located in header. Consists of two navigation bars: user related
 * links on the top and forum related links on the bottom.
 */
.inventea-user-bar,
.inventea-forum-bar {
	padding: 0 20px;
	background: #1f3e59; /* Fallback for older browsers */
	background: linear-gradient(to bottom, #1f3e59 0%, #153753 100%);
	color: #fff;
}

.inventea-user-bar {
	position: absolute;
	top: 0;
	width: 100%;
	height: 39px;
	padding-top: 10px;
	box-sizing: border-box;
	border-bottom-right-radius: 7px;
	border-bottom-left-radius: 7px;
	line-height: 18px;
}

.inventea-forum-bar {
	height: 45px;
	margin-top: -23px;
	border-radius: 7px;
	line-height: 45px;
}

.inventea-forum-menu {
	font-weight: bold;
}

.inventea-user-menu > li > a,
.inventea-forum-menu > li > a {
	color: #fff;
}

ul.linklist > li {
	margin: 0;
	padding: 0;
	line-height: inherit;
	font-size: 12px;
}

/* Remove links icons */
ul.linklist .small-icon {
	background: none;
}

ul.linklist .small-icon > a {
	padding: 0;
}

/**
 * User menu
 *
 * Navigation bar on the top of forum containing notifications, private messages
 * and dropdown profile links.
 */
ul.linklist.inventea-user-menu > li {
	margin-left: 0;
}

ul.linklist.inventea-user-menu > li + li {
	margin-right: 18px;
}

ul.linklist .icon-pm strong,
ul.linklist .icon-notification strong {
	font-weight: normal;
}

/* Small avatar near username */
.header-avatar img {
	max-height: 19px;
	margin: -2px 3px 0 0;
	border-radius: 3px;
}

.username {
	color: #fff;
}

.compact .icon-notification > a > strong,
.compact .icon-pm > a > strong {
	padding-left: 0;
}

.compact .icon-notification > a > span,
.compact .icon-pm > a > span {
	display: inline;
}

/* Hide empty responsive menu dropdown created for current time/last visit */
.inventea-user-menu .responsive-menu {
	display: none;
}

.no_notifications,
.notification_text {
	color: #105289;
}

/**
 * Forum navigation
 *
 * Displayed only on devices with screen width bigger than 700px. On devices
 * with low screen resolution it's replaced by dropdown menu with activation
 * button located in user menu.
 */
.inventea-forum-menu {
	display: block;
	list-style: none;
}

/* Space between menu items */
ul.linklist.inventea-forum-menu > li {
	float: left;
	padding: 0 14px;
	border-right: 1px solid #102435;
	border-left: 1px solid #1c3e5c;
}

ul.linklist.inventea-forum-menu > li:before {
	content: none;
}

ul.linklist.inventea-forum-menu > li:first-child {
	padding-left: 0;
	border-left: 0;
}

ul.linklist.inventea-forum-menu > li:nth-last-child(2),
ul.linklist.inventea-forum-menu > li:last-child {
	padding-right: 0;
	border-right: 0;
}

ul.linklist.inventea-forum-menu > li > a {
	color: #fff;
}

ul.linklist.inventea-forum-menu li.responsive-menu a.responsive-menu-link {
	margin: 0;
}

ul.linklist.inventea-forum-menu li.responsive-menu a.responsive-menu-link:before {
	border-color: #fff;
}

/**
 * Forum name and description
 */
.inventea-sitename {
	padding: 96px 60px 92px;
	color: #535353;
	font-family: Georgia, Cambria, "Times New Roman", serif;
	font-size: 16px;
}

.inventea-sitename span {
	margin-left: 18px;
}

.inventea-sitename a {
	color: #103143;
}

/**
 * Breadcrumbs
 */
ul.linklist li.inventea-breadcrumbs {
	float: none;
}

.inventea-breadcrumbs .crumb {
	display: inline-block;
	float: none;
	line-height: 18px;
	font-weight: normal;
}

.inventea-breadcrumbs .crumb:before {
	content: "\203a";
	display: inline-block;
	margin-left: 3px;
	margin-right: 7px;
	color: #b7c9d7;
	font-size: 14px;
	font-weight: normal;
}

.inventea-breadcrumbs .crumb:first-child:before {
	content: none;
}

#nav-breadcrumbs {
	margin-top: 22px;
	margin-bottom: 20px;
}

.inventea-breadcrumbs-container {
	margin-top: 22px;
	margin-bottom: 18px;
}

.inventea-breadcrumbs-container .crumb:before {
	color: #e7e4e4;
}

/**
 * Footer
 */
.inventea-footer-wrapper::after {
	content: "";
	position: fixed;
	height: 100%;
}

.inventea-footer a {
	color: #bab6b6;
}

/* Widgets */
.inventea-widgets-wrapper {
	overflow: hidden;
}

.inventea-widget {
	float: left;
}

.inventea-widget + .inventea-widget {
	margin-left: 4%;
}

.inventea-widget-title {
	margin-bottom: 15px;
	text-transform: uppercase;
}

/* Item list widget */
.inventea-list-widget {
	min-width: 25%;
}

.inventea-widget-links {
	list-style: none;
}

.inventea-widget-links-item {
	padding: 8px 0;
	border-top: 1px solid #474646;
	color: #bab6b6;
}

.inventea-widget-links-item:last-of-type {
	border-bottom: 1px solid #474646;
}

.inventea-widget-links-item > .fa {
	margin-right: 3px;
}

/* Text widget */
.inventea-text-widget {
	max-width: 40%;
}

/* Social icons */
.inventea-social-icons {
	list-style: none;
	font-size: 18px;
}

.inventea-social-icons-item {
	float: left;
	margin-right: 8px;
}

.inventea-social-icons-item a {
	display: block;
	width: 28px;
	border-radius: 50%;
	background: #bab6b6;
	color: #585757;
	text-align: center;
	line-height: 28px;
}

.inventea-social-icons-item a:focus,
.inventea-social-icons-item a:hover {
	background: #e7e4e4;
}

/**
 * Alerts
 */
div.rules,
p.rules {
	border: 1px solid #ebccd1;
	background-color: #f2dede;
	padding: 6px 9px;
}

div.rules {
	margin-top: 10px;
	margin-bottom: 15px;
	line-height: 18px;
	font-size: 12px;
}

p.rules img {
	padding-top: 0;
}

/* Disabled board information */
#information {
	margin-top: 0;
	margin-bottom: 24px;
}

.notice {
	margin-bottom: 15px;
	padding: 7px;
	border: 1px solid #ddd;
	background: #fbfbfb;
	line-height: 18px;
	font-family: Tahoma, Arial, Helvetica, sans-serif;
	font-size: 12px;
}

/**
 * Pagination
 */
.pagination {
	font-size: 12px;
}

.pagination li a,
.pagination li span {
	border-color: #b5b5b5;
	border-radius: 0;
}

.pagination li a {
	background: #e7e7e7;
	color: #525252;
}

.pagination li.active span {
	border-color: #cacaca;
	background: #f2f2f2;
	color: #959595;
}

.pagination li a:hover,
.pagination .dropdown-visible a.dropdown-trigger,
.nojs .pagination .dropdown-container:hover a.dropdown-trigger {
	border-color: #bc2a4d;
	background-color: #bc2a4d;
	color: #fff;
}

